updating assets and styling

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./reset.css">
-  <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 
-  <title>Portfolio//Captain Planet</title>
+  <title>Portfolio//Rick Morrissette</title>
 </head>
 
 <body>
   <section>
     <header class="main-header">
-      <h1>Captain Planet</h1>
+      <h1>Rick Morrissette</h1>
 
     </header>
     <nav>
@@ -43,9 +43,12 @@
       quae aliquam eaque inventore incidunt. Inventore dolor similique tempora, nisi corrupti optio ad, odio ducimus
       quia dolorem debitis, quam dolores ullam ratione maxime pariatur! Quaerat possimus velit reiciendis.
       Exercitationem voluptatum ratione alias repellat! <br>
-      <div class="profile-pic"><img id="profile-pic" src="./assets/capt-avatar.png" alt="">
-      </div>
     </p>
+    <div class="profile-pic">
+      <div id="profile-pic">
+        
+      </div>
+    </div>
   </section>
   <main>
     <section id="work">
@@ -55,21 +58,16 @@
       <section class="test">
         <div class="flex-container">
           <div class="feature-wraper">
-          <div class="cards project feature-image" onclick="location.href='https://www.google.com/';">
-            <p>Project 1</p>
+          <div class="cards project feature-image" onclick="location.href='https://alexgeis.github.io/VIBE-LOUNGE/';">
+            <p>Project: Vibe Lounge</p>
           </div>
           </div>
-          <div class="cards">
-            <p>Project 2</p>
-            <a href="https://google.com" target="_blank"><img
-                src="https://images.unsplash.com/photo-1644158959163-515f32e63ed8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8&auto=format&fit=crop&w=400&q=60"
-                alt="Project 2"></a>
+          <div class="cards card1" onclick="location.href='https://confusedicarus.github.io/03-js-password-generator-project/'">
+            <p>Password Generator</p>
           </div>
-          <div class="cards">
-            <p>Project 3</p>
-            <a href="https://google.com" target="_blank"><img
-                src="https://images.unsplash.com/photo-1644091578502-9131622d68b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzM3x8fGVufDB8fHx8&auto=format&fit=crop&w=400&q=60"
-                alt="Project 3">
+          <div class="cards card" onclick="location.href='https://confusedicarus.github.io/05-daily-work-scheduler/'">
+            <p>Work Day Scheduler</p>
+            
           </div>
         </div>
       </section>
@@ -79,8 +77,9 @@
     <h4 id="contact-me">Contact Me</h4>
     <ul class="contact-me">
       <li><a href="tel:555.555.5555"></a>555.555.5555</li>
-      <li><a href="mailto: abc@example.com"></a>example@website.com</li>
-      <li>GitHub</li>
+      <li><a href="mailto: rlmor1023@gmail.com"></a>rlmor1023@gmail.com</li>
+      <li><a href="https://github.com/confusedicarus">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/rick-morrissette-4bb362149/">Linkedin</a></li>
       <li>Twitter</li>
       <li>Instagram</li>
     </ul>
