finishing last styling changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="./assets/Resume 2022.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
     <div id="backgroundHeadImg" class="background-head" >
@@ -47,7 +47,7 @@
       soluta earum, odit nulla nisi eveniet minima voluptatum error, culpa cum, reiciendis quam porro sit facere quidem
       quae aliquam eaque inventore incidunt. Inventore dolor similique tempora, nisi corrupti optio ad, odio ducimus
       quia dolorem debitis, quam dolores ullam ratione maxime pariatur! Quaerat possimus velit reiciendis.
-      Exercitationem voluptatum ratione alias repellat! <br>
+      Exercitationem voluptatum ratione alias repellat!
     </p>
     
   </section>
