--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="info-me">
     <h4 id="contact-me">Contact Me</h4>
     <ul class="contact-me">
-      <li><a href="tel:555.555.5555"></a>555.555.5555</li>
+      <li><a href="tel:720.515.7247"></a>(720) 515-7247</li>
       <li><a href="mailto: rlmor1023@gmail.com"></a>rlmor1023@gmail.com</li>
       <li><a href="https://github.com/confusedicarus">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/rick-morrissette-4bb362149/">Linkedin</a></li>
